<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_ruled_bg"
    tools:context=".fragment.PlayMineFragment">

    <TextView
        android:id="@+id/timerText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_white_background"
        android:gravity="center"
        android:text="@string/game_ends_in"
        android:textColor="@color/app_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/wordText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_white_background"
        android:gravity="center"
        android:text="@string/hangman"
        android:textColor="@color/app_red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />


    <TextView
        android:id="@+id/statusText"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_white_background"
        android:gravity="center"
        android:text="Pass hint to score"
        android:textColor="@color/app_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordText" />


    <LinearLayout
        android:id="@+id/hintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_white_background"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hints_given"
            android:textColor="@color/app_red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hintText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/missing"
            android:textColor="@color/app_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/hintText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/missing"
            android:textColor="@color/app_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/hintText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/missing"
            android:textColor="@color/app_grey"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Enter Hint"
                android:textColor="@color/app_red"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/hintCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_count_text"
                android:textColor="@color/app_red"
                android:textSize="16sp" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hintInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white_background"
            android:hint="Enter here"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hintInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/view_background_grey"
                android:inputType="text"
                android:maxLength="20"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>