<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_ruled_bg"
    tools:context=".fragment.PlayMineFragment">

    <TextView
        android:id="@+id/timerText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_white_background"
        android:gravity="center"
        android:text="@string/guess_the_word_in_00_00"
        android:textColor="@color/app_red"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hangmanDisplayText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_white_background"
        android:gravity="center"
        android:text="@string/hangman"
        android:textColor="@color/app_light_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />

    <LinearLayout
        android:id="@+id/wordDisplayLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/alphaKeyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangmanDisplayText">

        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_white_text_box"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="A" />

    </LinearLayout>

    <com.taz.hangman.widgets.AlphaKeyboard
        android:id="@+id/alphaKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordDisplayLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_white_background"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hints_given"
            android:textColor="@color/app_red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hintText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/missing"
            android:textColor="@color/app_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/hintText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/missing"
            android:textColor="@color/app_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/hintText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/missing"
            android:textColor="@color/app_grey"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>